IMG-3 | Completed image gallery
Signed-off-by: Adeola Adeyemo <adeola.adeyemoj@yahoo.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,21 @@
 {
     "env": {
-        "es2020": true
+        "es2020": true,
+        "browser": true,
+        "node": true
     },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
         "airbnb"
     ],
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx"]
+            }
+        }
+    },
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
