--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-lazyload": "^3.1.0",
     "react-redux": "^7.2.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
+    "react-toastify": "^6.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "sass-loader": "10.0.5",
     "web-vitals": "^0.2.4"
   },
