--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "production": [
       ">0.2%",
       "not dead",
+      "since 2010",
       "not op_mini all"
     ],
     "development": [
